--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "target": "ESNEXT",
     "typeRoots": ["typings"],
-    "types": ["svelte", "@sapper"],
+    "types": ["node", "svelte", "@sapper"],
     "skipLibCheck": true
   }
 }
