refactor: dotenv-expand/dotenv-cli

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "css-loader": "^4.2.2",
     "cypress": "^5.0.0",
     "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
+    "dotenv-expand": "^5.1.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-import-resolver-typescript": "^2.2.1",
@@ -139,12 +141,12 @@
     "stylelint:css:fix": "npm run stylelint:css --fix",
     "stylelint:scss:fix": "npm run stylelint:scss --fix",
     "svelte:check": "svelte-check",
-    "test:headless:dev": "start-server-and-test dev http://localhost:3000 test:headless",
-    "test:headless:prod": "start-server-and-test start http://localhost:3000 test:headless",
-    "test:headless": "cypress run",
-    "test:ui": "cypress open",
-    "test:ui:dev": "start-server-and-test dev http://localhost:3000 test:ui",
-    "test:ui:prod": "start-server-and-test start http://localhost:3000 test:ui",
+    "test:headless:dev": "start-server-and-test dev $(dotenv -p HOST) test:headless",
+    "test:headless:prod": "start-server-and-test start $(dotenv -p HOST) test:headless",
+    "test:headless": "cypress run --config baseUrl=$(dotenv -p HOST)",
+    "test:ui": "cypress open --config baseUrl=$(dotenv -p HOST)",
+    "test:ui:dev": "start-server-and-test dev $(dotenv -p HOST) test:ui",
+    "test:ui:prod": "start-server-and-test start $(dotenv -p HOST) test:ui",
     "update:install": "npm update && npm install",
     "update:pull": "npm outdated"
   },
